<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgColor"
    android:paddingLeft="@dimen/padding_child"
    android:paddingRight="@dimen/padding_child"
    tools:context=".activity.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/artist_detail_toolbar"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:title="@string/artist_toolbar"
        android:background="@color/bgColor"/>

    <ScrollView
        android:layout_marginTop="@dimen/padding_child"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/search_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/artist_detail_logo"
                    android:layout_width="match_parent"
                    android:scaleType="centerCrop"
                    android:padding="@dimen/padding_logo"
                    android:layout_height="100dp"/>
            </LinearLayout>
            <LinearLayout
                android:padding="@dimen/padding_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/artist_detail_name"
                    android:textAlignment="textStart"
                    android:padding="@dimen/padding_child"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_title"/>
                <TextView
                    android:textAlignment="textEnd"
                    android:layout_weight="1"
                    android:id="@+id/artist_detail_year"
                    android:padding="@dimen/padding_child"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_size_label"/>
            </LinearLayout>
            <TextView
                android:id="@+id/artist_detail_website"
                android:padding="@dimen/padding_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_label"/>

            <LinearLayout
                android:layout_marginTop="@dimen/padding_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/artist_detail_thumb"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"/>
            </LinearLayout>

            <TextView
                android:id="@+id/artist_detail_biog"
                android:padding="@dimen/padding_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding_left_right"
                android:paddingEnd="@dimen/padding_left_right"
                android:gravity="center">
                <Button
                    android:id="@+id/artist_detail_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/video_btn"
                    android:textColor="@color/colorWhite"
                    android:background="@color/bgColor"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_logo"/>

                <Button
                    android:layout_marginTop="@dimen/padding_child"
                    android:id="@+id/user_detail_albums"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_album_toolbar"
                    android:textColor="@color/colorWhite"
                    android:background="@color/bgColor"
                    android:layout_gravity="center"
                    android:padding="@dimen/padding_logo"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>